--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>practice portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Goblin+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Weelcome To</h1>
+            <h1><span class="purple-color">ISRAT JAHAN</span> World</h1>
+            <h3>Birth & hieldhood</h3>
+            <p>israt jahan was born in his grandfather house golbuniya ,pirozopur.his father name is md abdus
+                salam.grandfather name is abdus roshid howlader.his mother name is taslima begum ,his father is a govt
+                employee .when she is 1 yer old she moved her grandfather house.</p>
+            <a class="link-button" target="_blank" href="https://github.com/israt1988/practice-portfolio"> ITS ME </a>
+            <!-- terget use hoyeche new tab a link open hobar jonn -->
+        </div>
+        <div class="half-width">
+            <img src="images/my-bg.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
