--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
             <img src="images/my-bg.png" alt="">
         </div>
     </section>
+    <section class="midle-banner">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+
+        </div>
+        <div class="half-width">
+            <h1>Weelcome To</h1>
+            <h1><span class="purple-color">ISRAT JAHAN</span> World</h1>
+            <h3>Birth & hieldhood</h3>
+            <p>israt jahan was born in his grandfather house golbuniya ,pirozopur.his father name is md abdus
+                salam.grandfather name is abdus roshid howlader.his mother name is taslima begum ,his father is a govt
+                employee .when she is 1 yer old she moved her grandfather house.</p>
+            <a class="link-button" target="_blank" href="https://github.com/israt1988/practice-portfolio"> ITS ME </a>
+            <!-- terget use hoyeche new tab a link open hobar jonn -->
+        </div>
+
+
+    </section>
 </body>
 
 </html>
