--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flaxible-container">
         <div class="half-width">
             <h1>Weelcome To</h1>
             <h1><span class="purple-color">ISRAT JAHAN</span> World</h1>
@@ -28,7 +28,7 @@
             <img src="images/my-bg.png" alt="">
         </div>
     </section>
-    <section class="midle-banner">
+    <section class="midle-banner flaxible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
 
@@ -43,7 +43,22 @@
             <a class="link-button" target="_blank" href="https://github.com/israt1988/practice-portfolio"> ITS ME </a>
             <!-- terget use hoyeche new tab a link open hobar jonn -->
         </div>
-
+    </section>
+    <section class="experienc">
+        <h1>EXPERIENCE</h1>
+        <div class="flaxible-container">
+            <div class="half-width inline-box" id="blue">
+                <h3>Present </h3>
+                <p>naw i am in study .in future i want to be a warld class web develope.i will try my best .but i know
+                    what
+                    i do it .now i ilearn wed de</p>
+            </div>
+            <div class="half-width inline-box" id="orange-id">
+                <h3>BIODATA</h3>
+                <p>here is attach my cv .my assignment .plese chack this attachment i know this is not eno to pass tihis
+                    session but i m try to my best performence.</p>
+            </div>
+        </div>
 
     </section>
 </body>
