--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
                     session but i m try to my best performence.</p>
             </div>
         </div>
-
     </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
